--- a/bhero.com/index.html
+++ b/bhero.com/index.html
@@ -911,7 +911,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
                         </svg>
                       </div>
                     </button>
-                    <a class="c-button c-button--white mb-4" href="https://t.me/bhnetwork">
+                    <a class="c-button c-button--white mb-4" href="https://t.me/BHNetworksupport">
                       <div class="flex items-center"><span>Telegram</span>
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right text-md mx-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                           <path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"></path>
